--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>The Pig Game</title>
+    <title>The Pig Game – Tung Nguyen</title>
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎲</text></svg>"
@@ -15,7 +15,7 @@
     <main>
       <section class="player player-0 _active">
         <h2 class="name" id="name-0">Player 1</h2>
-        <p class="score" id="scoresHold-0">0</p>
+        <p class="score" id="scoresHold-0">43</p>
         <div class="current">
           <p class="current-label">Current</p>
           <p class="current-score" id="scoresArchive-0">0</p>
@@ -23,7 +23,7 @@
       </section>
       <section class="player player-1">
         <h2 class="name" id="name-1">Player 2</h2>
-        <p class="score" id="scoresHold-1">0</p>
+        <p class="score" id="scoresHold-1">24</p>
         <div class="current">
           <p class="current-label">Current</p>
           <p class="current-score" id="scoresArchive-1">0</p>
